* added ServiceProxyDestroyedException to indicate the illegal usage of a destroyed proxy
* refined dynamic proxies (unary cardinality) to throw ServiceProxyDestroyedException instead of IllegalStateException
* refined static proxies (multi cardinality) to throw ServiceProxyDestroyedException if used after being destroyed

Package org.springframework.osgi.test
* removed usage of PackageAdmin for resolving bundles

Package org.springframework.osgi.web
* improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
* fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header


Changes in version 1.1.0 M2 (2008-04-29)
-----------------------------------------

General
* Spring 2.5.4+ required
* upgraded to Felix 1.0.4
* refined the web deployer API
* split web functionality into web and web-extender (symbolic name:org.springframework.bundle.osgi.web.extender) bundle
* added integration with Spring MVC
* added 'greedy-proxying' attribute to reference collections (spring-osgi.xsd)
* reduced the number of class loader instances generated internally by Spring-DM
* improved proxy infrastructure to avoid type leaks or the usage of spring-aop dynamic import

Package org.springframework.osgi.config
* removed usage of deprecated setSource method in AbstractReferenceDefinitionParser
* added support for 'greedy-proxying' attribute

Package org.springframework.osgi.context
* added OSGi import for Spring property editors loaded reflectively
* improved loading of property editors by using Spring-DM core bundle instead of the target bundle
* AbstractOsgiBundleApplicationContext uses the raw bundle as the bean class loader to avoid class leaks
* improved start up NamespaceHandlerResolver look up to avoid class incompatibility problems