@@ -28,13 +28,12 @@ import junit.framework.TestCase;
 
 import org.easymock.MockControl;
 import org.osgi.framework.ServiceReference;
-import org.springframework.beans.BeansException;
-import org.springframework.beans.factory.BeanFactory;
-import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.osgi.mock.MockServiceReference;
 import org.springframework.osgi.service.importer.ImportedOsgiServiceProxy;
 import org.springframework.osgi.service.importer.OsgiServiceLifecycleListener;
+import org.springframework.osgi.service.importer.ServiceReferenceProxy;
+import org.springframework.osgi.service.importer.internal.aop.StaticServiceReferenceProxy;
 import org.springframework.osgi.util.internal.MapBasedDictionary;
 
 /**
@@ -593,10 +592,9 @@ public class OsgiServiceLifecycleListenerAdapterTest extends TestCase {
 			return new HashMap();
 		}
 
-		public ServiceReference getServiceReference() {
-			return new MockServiceReference();
+		public ServiceReferenceProxy getServiceReference() {
+			return new StaticServiceReferenceProxy(new MockServiceReference());
 		}
-
 	}
 
 
